<resources>
    <string name="app_name">Practical2Question1</string>
    <string name="text">Hello World!</string>
    <string name="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="button">FOLLOW</string>
    <string name="button2">MESSAGE</string>
    <string name="button1">UNFOLLOW</string>
    <string name="image">image</string>
</resources>